<resources>
    <string name="app_name">TestApp</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_main_new">MainActivityNew</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="health_chart_title">Health</string>
    <string name="percent_title">100%</string>
    <string name="well_being_indicators_title">Well Being Indicators</string>
    <string name="resistance_chart_title">Resistance</string>
    <string name="happiness_chart_title">Happiness</string>
    <string name="intelligence_chart_title">Intelligence</string>
    <string name="artistic_chart_title">Artistic</string>
    <string name="musical_chart_title">Musical</string>
    <string name="athletic_chart_title">Athlectic</string>
    <string name="strength_chart_title">Strength</string>
    <string name="endurance_chart_title">Endurance</string>
    <string name="spiritual_chart_title">Spiritual</string>
    <string name="wisdom_chart_title">Wisdom</string>
    <string name="tab_text_statistics">Statistics</string>
    <string name="tab_text_wikipedia">Wikipedia</string>
    <string name="tab_text_lonely_planet">Lonely Planet</string>
    <string name="settings_info">By Default, RealLives considers all the below issues. Uncheck an issue to have RealLives avoid it.</string>

    <!--YourCountry Statistics Table-->
    <!--Country Detals-->
    <string name="capital">Capital</string>
    <string name="currency_name">Currency Name</string>
    <string name="primary_school">Primary School</string>

    <!--Prevalent Parameters-->
    <string name="population">Population</string>
    <string name="sex_ratio">Sex Ratio</string>
    <string name="birth_rate">Birth Rate</string>
    <string name="death_rate">Death Rate</string>
    <string name="infant_mortality">Infant Mortality</string>

    <!--Per Capita-->
    <string name="primary_school_enrollment">Primary School Enrollment</string>
    <string name="unemployment_rate">Unemployment Rate</string>
    <string name="health_exp_per_capita">Health Exp. per capita</string>
    <string name="access_to_electricity">Access to Electricity</string>

    <!--Labour Force By Occupation-->
    <string name="agriculture">Agriculture</string>
    <string name="services">Services</string>
    <string name="industry">Industry</string>

    <!--Per Index/Ranking-->
    <string name="ppp">PPP</string>
    <string name="gini">GINIRate</string>
    <string name="sdg">SDG</string>
    <string name="happiness_index">Happiness Index</string>
    <string name="hdi">HDI</string>
    <string name="corruption">Corruption</string>
    <string name="goitre">Goitre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nested_tabs">NestedTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
